--- a/src/index.css
+++ b/src/index.css
@@ -5,24 +5,24 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
-	--background: hsl(0 0% 100%);
-	--foreground: hsl(0 0% 3.9%);
-	--card: hsl(0 0% 100%);
-	--card-foreground: hsl(0 0% 3.9%);
-	--popover: hsl(0 0% 100%);
-	--popover-foreground: hsl(0 0% 3.9%);
-	--primary: hsl(0 0% 9%);
-	--primary-foreground: hsl(0 0% 98%);
-	--secondary: hsl(0 0% 96.1%);
-	--secondary-foreground: hsl(0 0% 9%);
-	--muted: hsl(0 0% 96.1%);
-	--muted-foreground: hsl(0 0% 45.1%);
-	--accent: hsl(0 0% 96.1%);
-	--accent-foreground: hsl(0 0% 9%);
+	--background: hsl(0, 0%, 100%);
+	--foreground: hsl(227, 5%, 0%);
+	--card: hsl(227, 50%, 90%);
+	--card-foreground: hsl(227, 5%, 10%);
+	--popover: hsl(0, 0%, 100%);
+	--popover-foreground: hsl(227, 100%, 0%);
+	--primary: hsl(227, 86.8%, 58.4%);
+	--primary-foreground: hsl(0, 0%, 100%);
+	--secondary: hsl(227, 30%, 70%);
+	--secondary-foreground: hsl(0, 0%, 0%);
+	--muted: hsl(189, 30%, 85%);
+	--muted-foreground: hsl(227, 5%, 35%);
+	--accent: hsl(189, 30%, 80%);
+	--accent-foreground: hsl(227, 5%, 10%);
 	--destructive: hsl(0 84.2% 60.2%);
-	--destructive-foreground: hsl(0 0% 98%);
-	--border: hsl(0 0% 89.8%);
-	--input: hsl(0 0% 89.8%);
+	--border: hsl(227, 30%, 50%);
+	--input: hsl(227, 30%, 18%);
+	--ring: hsl(227, 86.8%, 58.4%);
 	--ring: hsl(0 0% 3.9%);
 	--chart-1: hsl(12 76% 61%);
 	--chart-2: hsl(173 58% 39%);
@@ -33,25 +33,25 @@
 }
 
 .dark {
-	--background: hsl(0 0% 3.9%);
-	--foreground: hsl(0 0% 98%);
-	--card: hsl(0 0% 3.9%);
-	--card-foreground: hsl(0 0% 98%);
-	--popover: hsl(0 0% 3.9%);
-	--popover-foreground: hsl(0 0% 98%);
-	--primary: hsl(0 0% 98%);
-	--primary-foreground: hsl(0 0% 9%);
-	--secondary: hsl(0 0% 14.9%);
-	--secondary-foreground: hsl(0 0% 98%);
-	--muted: hsl(0 0% 14.9%);
-	--muted-foreground: hsl(0 0% 63.9%);
-	--accent: hsl(0 0% 14.9%);
-	--accent-foreground: hsl(0 0% 98%);
+	--background: hsl(227, 50%, 5%);
+	--foreground: hsl(227, 5%, 90%);
+	--card: hsl(227, 50%, 0%);
+	--card-foreground: hsl(227, 5%, 90%);
+	--popover: hsl(227, 50%, 5%);
+	--popover-foreground: hsl(227, 5%, 90%);
+	--primary: hsl(227, 86.8%, 58.4%);
+	--primary-foreground: hsl(0, 0%, 100%);
+	--secondary: hsl(227, 30%, 10%);
+	--secondary-foreground: hsl(0, 0%, 100%);
+	--muted: hsl(189, 30%, 15%);
+	--muted-foreground: hsl(227, 5%, 60%);
+	--accent: hsl(189, 30%, 15%);
+	--accent-foreground: hsl(227, 5%, 90%);
 	--destructive: hsl(0 62.8% 30.6%);
 	--destructive-foreground: hsl(0 0% 98%);
-	--border: hsl(0 0% 14.9%);
-	--input: hsl(0 0% 14.9%);
-	--ring: hsl(0 0% 83.1%);
+	--border: hsl(227, 30%, 18%);
+	--input: hsl(227, 30%, 18%);
+	--ring: hsl(227, 86.8%, 58.4%);
 	--chart-1: hsl(220 70% 50%);
 	--chart-2: hsl(160 60% 45%);
 	--chart-3: hsl(30 80% 55%);
@@ -96,5 +96,9 @@
 	}
 	body {
 		@apply bg-background text-foreground;
+	}
+
+	.container {
+		@apply mx-auto max-w-[1440px] px-6 md:px-8;
 	}
 }
