--- a/src/index.css
+++ b/src/index.css
@@ -101,4 +101,10 @@
 	.container {
 		@apply mx-auto max-w-[1440px] px-6 md:px-8;
 	}
+
+	input[type="number"]::-webkit-inner-spin-button,
+	input[type="number"]::-webkit-outer-spin-button {
+		-webkit-appearance: none;
+		margin: 0;
+	}
 }
