--- a/src/index.css
+++ b/src/index.css
@@ -24,11 +24,11 @@
 	--input: hsl(227, 30%, 18%);
 	--ring: hsl(227, 86.8%, 58.4%);
 	--ring: hsl(0 0% 3.9%);
-	--chart-1: hsl(12 76% 61%);
-	--chart-2: hsl(173 58% 39%);
-	--chart-3: hsl(197 37% 24%);
-	--chart-4: hsl(43 74% 66%);
-	--chart-5: hsl(27 87% 67%);
+	--chart-1: 221.2 83.2% 53.3%;
+	--chart-2: 212 95% 68%;
+	--chart-3: 216 92% 60%;
+	--chart-4: 210 98% 78%;
+	--chart-5: 212 97% 87%;
 	--radius: 0.6rem;
 }
 
@@ -52,11 +52,11 @@
 	--border: hsl(227, 30%, 18%);
 	--input: hsl(227, 30%, 18%);
 	--ring: hsl(227, 86.8%, 58.4%);
-	--chart-1: hsl(220 70% 50%);
-	--chart-2: hsl(160 60% 45%);
-	--chart-3: hsl(30 80% 55%);
-	--chart-4: hsl(280 65% 60%);
-	--chart-5: hsl(340 75% 55%);
+	--chart-1: 221.2 83.2% 53.3%;
+	--chart-2: 212 95% 68%;
+	--chart-3: 216 92% 60%;
+	--chart-4: 210 98% 78%;
+	--chart-5: 212 97% 87%;
 }
 
 @theme inline {
