--- a/src/index.css
+++ b/src/index.css
@@ -157,4 +157,12 @@
 	.table-right-shadow {
 		@apply after:pointer-events-none after:absolute after:bottom-0 after:right-0 after:top-0 after:z-30 after:w-12 after:content-[""] after:[box-shadow:inset_-10px_0_8px_-8px_rgba(5,5,5,0.2)];
 	}
+
+	.main-shadow {
+		@apply shadow-[0px_1px_2px_0px_#00000040];
+	}
+
+	.main-shadow-inset {
+		@apply shadow-[0px_1px_2px_0px_#00000040_inset];
+	}
 }
