fix(index.css): container class

--- a/src/index.css
+++ b/src/index.css
@@ -138,14 +138,20 @@
 		@apply bg-background text-foreground;
 	}
 
-	.container {
-		@apply mx-auto max-w-[1440px] px-6 md:px-8;
-	}
-
 	input[type="number"]::-webkit-inner-spin-button,
 	input[type="number"]::-webkit-outer-spin-button {
 		-webkit-appearance: none;
 		margin: 0;
+	}
+}
+
+@utility container {
+	padding-inline: 1.2rem;
+	margin-inline: auto;
+	max-width: 90rem;
+
+	@variant lg {
+		padding-inline: 2rem;
 	}
 }
 
