chore: improve ui

--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@
 	--primary-100: hsl(227, 100%, 67%);
 	--primary-200: hsl(227, 77%, 50%);
 	--secondary-500: hsl(0, 0%, 79%);
-	--hovering: hsla(260, 100%, 78%, 0.2);
+	--hovering: hsl(210, 37%, 93%);
 	--text-link: hsl(207, 100%, 55%);
 	--text-primary-100: hsl(0, 0%, 26%);
 	--text-primary-500: hsl(0, 0%, 13%);
